conservator/tests/fail/update_without_set.stderr
error[E0599]: no method named `build` found for struct `UpdateBuilder<User, false, true>` in the current scope
  --> tests/fail/update_without_set.rs:18:10
   |
16 |       let _result = User::update_query()
   |  ___________________-
17 | |         .filter(User::COLUMNS.id.eq(1))
18 | |         .build();
   | |         -^^^^^ method not found in `UpdateBuilder<User, false, true>`
   | |_________|
   |
   |
   = note: the method was found for
           - `UpdateBuilder<T, true, true>`
